--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^2.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "stripe": "^14.11.0",
